tests/transpiler/x/swift/map_nested_assign.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/051/main.swift:4:13: error: value of optional type '[String : Int]?' must be unwrapped to refer to member 'subscript' of wrapped base type '[String : Int]'
2 | import Foundation
3 | var data = ["outer": ["inner": 1]]
4 | data["outer"]["inner"] = 2
  |             |- error: value of optional type '[String : Int]?' must be unwrapped to refer to member 'subscript' of wrapped base type '[String : Int]'
  |             |- note: chain the optional using '?' to access member 'subscript' only for non-'nil' base values
  |             `- note: force-unwrap using '!' to abort execution if the optional value contains 'nil'
5 | print(String(describing: (data["outer"]!["inner"]! as! Int)))
6 | 

/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/051/main.swift:5:52: warning: forced cast of 'Int' to same type has no effect
3 | var data = ["outer": ["inner": 1]]
4 | data["outer"]["inner"] = 2
5 | print(String(describing: (data["outer"]!["inner"]! as! Int)))
  |                                                    `- warning: forced cast of 'Int' to same type has no effect
6 | 
