tests/transpiler/x/swift/map_nested_assign.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:52:46 GMT+7
import Foundation
var data = ["outer": ["inner": 1]]
data["outer"]["inner"] = 2
print(String(describing: (data["outer"]!["inner"]! as! Int)))
